<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.jcu.plandoll16.homework7.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:id="@+id/topTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_title_material" />

        <Space
            android:layout_width="20px"
            android:layout_height="50px" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/difficultyRadioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:id="@+id/easyRadioButton"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/mediumRadioButton"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:id="@+id/hardRadioButton"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:id="@+id/beginButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="beginButtonClick" />

    <Space
        android:layout_width="20px"
        android:layout_height="50px"
        android:layout_below="@+id/beginButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentTextView"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
